--- a/main/package.json
+++ b/main/package.json
@@ -73,7 +73,7 @@
         "@napgram/web-interfaces": "^0.1.12",
         "@naplink/naplink": "^0.0.3",
         "@sentry/node": "10.32.1",
-        "drizzle-kit": "1.0.0-beta.9-e89174b",
+        "drizzle-kit": "^0.31.8",
         "fastify": "5.6.2",
         "fflate": "^0.8.2",
         "file-type": "^21.3.0",
