--- a/main/package.json
+++ b/main/package.json
@@ -31,7 +31,7 @@
         "@mtcute/node": "^0.27.5",
         "@napgram/auth-kit": "^0.1.5",
         "@napgram/database": "^0.1.1",
-        "@napgram/feature-kit": "^0.1.10",
+        "@napgram/feature-kit": "^0.1.13",
         "@napgram/gateway-kit": "^0.1.8",
         "@napgram/infra-kit": "^0.1.5",
         "@napgram/marketplace-kit": "^0.1.6",
@@ -58,6 +58,7 @@
         "@napgram/plugin-monitoring": "^0.1.4",
         "@napgram/plugin-notifications": "^0.1.4",
         "@napgram/plugin-ping-pong": "^0.1.4",
+        "@napgram/plugin-permission-management": "^0.1.1",
         "@napgram/plugin-qq-interaction": "^0.1.5",
         "@napgram/plugin-recall": "^0.1.4",
         "@napgram/plugin-refresh": "^0.1.4",
