--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ registries:
   github-packages:
     type: npm-registry
     url: https://npm.pkg.github.com
-    token: ${{secrets.GITHUB_TOKEN}}
+    token: ${{secrets.NPM_TOKEN}}
 
 updates:
   # workspace 根目录 (npm lockfile)
