--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         ]
     },
     "devDependencies": {
-        "typescript": "5.9.3"
+        "typescript": "5.9.3",
+        "@types/node": "25.0.6"
     }
 }
