--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -51,50 +51,7 @@ updates:
           - "minor"
           - "patch"
     
-    # 只更新内部包
-    allow:
-      - dependency-name: "@napgram/*"
-    ignore:
-      - dependency-name: "@naplink/naplink"
-
-  # workspace 根目录 (pnpm lockfile) - 其他包走 npmjs
-  - package-ecosystem: "npm"
-    directory: "/"
-    schedule:
-      interval: "daily"
-    open-pull-requests-limit: 10
-    target-branch: "dev"
-    
-    # 显式指定 Commit 风格
-    commit-message:
-      prefix: "chore(deps)"
-      prefix-development: "chore(deps-dev)"
-    
-    # 依赖分组
-    groups:
-      production-deps:
-        patterns:
-          - "@fastify/*"
-          - "@mtcute/*"
-          - "fastify"
-        update-types:
-          - "minor"
-          - "patch"
-      
-      dev-deps:
-        patterns:
-          - "@types/*"
-          - "typescript"
-          - "vitest"
-          - "eslint"
-        dependency-type: "development"
-        update-types:
-          - "minor"
-          - "patch"
-    
-    # 排除内部包，避免 npmjs 路径更新
-    ignore:
-      - dependency-name: "@napgram/*"
+    ignore: []
 
   - package-ecosystem: "github-actions"
     directory: "/"
