--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,6 @@
-@napgram:registry=https://npm.pkg.github.com
+# 为私有包设置 GitHub Packages 注册表
+@napgram:registry=https://npm.pkg.github.com/
 //npm.pkg.github.com/:_authToken=${NPM_TOKEN}
-link-workspace-packages=false
+
+# 公共包使用默认注册表
+registry=https://registry.npmjs.org/
